--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@ springDocOpenApiVersion=2.7.0
 springMockkVersion=4.0.2
 mockitoVersion=5.14.0
 instancioJUnitVersion=5.0.2
+archunitVersion=1.3.0
 slackAppenderVersion=1.6.1
 kotlin.daemon.jvmargs=-Xmx1g -XX:MaxMetaspaceSize=512m
